# virtual-thermostat

./: .flake8  .gitignore  DOCKER.md  LICENSE  README.md  SHEETS.md  docker-compose.yml  pyproject.toml  virtual-thermostat-sensor.dockerfile  virtual-thermostat.dockerfile
.github/workflows/: build-and-push.yml  ci.yml  lint.yml  test.yml
config/: vthermostat_config.json
mqtt/config/: mosquitto.conf
tests/: test_dht11.py  test_mqtt_temperature.py  test_smoke.py
virtual_thermostat/: __init__.py  cli.py  daemon.py  dht11.py  main.py  sheets_logger.py  ui.py  web.py
virtual_thermostat/templates/: index.html
