[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-thermostat"
version = "0.1.0"
description = "A virtual thermostat for controlling smart plugs based on temperature"
authors = [
    {name = "Vicente Bolea"}
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
vthermostat-cli = "virtual_thermostat.cli:cli_main"
vthermostat-ui = "virtual_thermostat.ui:main"
vthermostat-dht11 = "virtual_thermostat.dht11:main"
vthermostat-sheets = "virtual_thermostat.sheets_logger:cli_main"

[tool.setuptools]
packages = ["virtual_thermostat"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = 'tests/.*\.pyi?$|virtual_thermostat/.*\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[project.optional-dependencies]
control = [
    "python-kasa",
    "trame",
    "trame-vuetify",
    "trame-server",
    "paho-mqtt",
    "click",
]

sensor = [
    "paho-mqtt",
    "Adafruit-DHT",
    "click",
]

sheets = [
    "paho-mqtt",
    "gspread",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "click",
    "requests",
]

dev = [
    "virtual-thermostat[control,sensor,sheets]",
    "black",
    "isort",
    "flake8",
    "pytest",
]
